--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,7 @@
 name: VyOS Nightly Build
 
 on:
-  schedule:
-    - cron: '0 0 * * *' # Run daily at midnight UTC
+  workflow_dispatch
 
 jobs:
   build:
