--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       PROJECT_ID: ${{ github.event.inputs.gcp_project_id }}
-      GCS_BUCKET: vyos-images
+      GCS_BUCKET: vyos-images-v1
     steps:
       - name: Checkout vyos-build repository
         uses: actions/checkout@v4
