--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,15 +20,31 @@ jobs:
           repository: vyos/vyos-build
           path: vyos-build
 
-      - name: Build VyOS ISO
+#      - name: Build VyOS ISO
+#        run: |
+#          docker run --rm --privileged -v $(pwd)/vyos-build:/vyos -w /vyos vyos/vyos-build:current bash -c "sudo ./build-vyos-image generic --architecture amd64"
+     
+      - name: Build VyOS Generic ISO
         run: |
-          docker run --rm --privileged -v $(pwd)/vyos-build:/vyos -w /vyos vyos/vyos-build:current bash -c "sudo ./build-vyos-image generic --architecture amd64"
-
-      - name: Upload VyOS ISO
-        uses: actions/upload-artifact@v4
-        with:
-          name: vyos-nightly-iso
-          path: vyos-build/build/*.iso
+          cd vyos-build
+          docker run --rm -v $PWD:/vyos -w /vyos vyos/vyos-build:current bash -c "
+            apt-get update && apt-get install -y ca-certificates sudo
+            update-ca-certificates
+            make iso
+          "          
+      - name: Convert ISO to tar.gz
+        run: |
+          cd vyos-build/build
+          ISO_FILE=$(ls vyos-*.iso | head -n 1)
+          TAR_FILE=\"${ISO_FILE%.iso}.tar.gz\"
+          echo \"Compressing $ISO_FILE into $TAR_FILE\"
+          tar -czvf \"$TAR_FILE\" \"$ISO_FILE\"
+          
+#      - name: Upload VyOS ISO
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: vyos-nightly-iso
+#          path: vyos-build/build/*.iso
           
       - name: Set up gcloud CLI
         uses: google-github-actions/setup-gcloud@v2
@@ -37,9 +53,10 @@ jobs:
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
 
-      - name: Upload image to GCS
-        uses: google-github-actions/upload-cloud-storage@v2
-        with:
-          path: vyos.iso
-          destination: gs://${{ env.GCS_BUCKET }}/vyos-${{ github.run_number }}.iso
-          project_id: ${{ env.PROJECT_ID }}
+      - name: Upload VyOS ISO tarball to GCS
+        run: |
+          cd vyos-build/build
+          FILE=$(ls vyos-*.tar.gz | head -n 1)
+          echo \"Uploading $FILE to gs://${GCS_BUCKET}/\"
+          gsutil cp \"$FILE\" \"gs://${GCS_BUCKET}/\"
+
