--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
           ls -l
           ISO_FILE=$(ls vyos-*.iso | head -n 1)
           if [ -z "$ISO_FILE" ]; then
-            echo "❌ No ISO file found in $(pwd)"
+            echo "No ISO file found in $(pwd)"
             exit 1
           fi
           
@@ -59,5 +59,5 @@ jobs:
           cd vyos-build/build
           FILE=$(ls vyos-*.tar.gz | head -n 1)
           echo \"Uploading $FILE to gs://${GCS_BUCKET}/\"
-          gsutil cp \"$FILE\" \"gs://${GCS_BUCKET}/\"
+          gsutil cp "$FILE" "gs://${GCS_BUCKET}/"
 
