--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,6 +46,10 @@ jobs:
 #        with:
 #          name: vyos-nightly-iso
 #          path: vyos-build/build/*.iso
+      - name: Authenticate to GCP
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
           
       - name: Set up gcloud CLI
         uses: google-github-actions/setup-gcloud@v2
