--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,22 +24,43 @@ jobs:
         run: |
          sudo docker run --rm --privileged -v $(pwd)/vyos-build:/vyos -w /vyos vyos/vyos-build:current bash -c "sudo ./build-vyos-image generic --architecture amd64"
          
-      - name: Convert ISO to tar.gz
+
+      - name: Prepare GCE-compatible tar.gz
         run: |
           cd vyos-build/build
-          echo "Fixing permissions..."
-          sudo chown -R $USER:$USER .
-          echo "Looking for ISO..."
-          ls -l
-          ISO_FILE=$(ls vyos-*.iso | head -n 1)
-          if [ -z "$ISO_FILE" ]; then
-            echo "No ISO file found in $(pwd)"
+          echo "Checking for built VyOS image..."
+          ls -lh
+
+          # Find the raw image (usually a .raw or .img)
+          RAW_FILE=$(ls vyos-*.raw vyos-*.img 2>/dev/null | head -n 1)
+          if [ -z "$RAW_FILE" ]; then
+            echo "No raw disk image found. Check build logs."
             exit 1
           fi
+
+          echo "Found disk: $RAW_FILE"
+          echo "Renaming to disk.raw and packaging..."
+          mv "$RAW_FILE" disk.raw
+          TAR_FILE="vyos-$(date +%Y%m%d%H%M)-gce.tar.gz"
+          tar -czf "$TAR_FILE" disk.raw
+          ls -lh "$TAR_FILE"     
+      
+      # - name: Convert ISO to tar.gz
+      #   run: |
+      #     cd vyos-build/build
+      #     echo "Fixing permissions..."
+      #     sudo chown -R $USER:$USER .
+      #     echo "Looking for ISO..."
+      #     ls -l
+      #     ISO_FILE=$(ls vyos-*.iso | head -n 1)
+      #     if [ -z "$ISO_FILE" ]; then
+      #       echo "No ISO file found in $(pwd)"
+      #       exit 1
+      #     fi
           
-          TAR_FILE="${ISO_FILE%.iso}.tar.gz"
-          echo \"Compressing $ISO_FILE into $TAR_FILE\"
-          sudo tar -czvf "$TAR_FILE" "$ISO_FILE"
+      #     TAR_FILE="${ISO_FILE%.iso}.tar.gz"
+      #     echo \"Compressing $ISO_FILE into $TAR_FILE\"
+      #     sudo tar -czvf "$TAR_FILE" "$ISO_FILE"
           
 #      - name: Upload VyOS ISO
 #        uses: actions/upload-artifact@v4
