--- a/.github/workflows/1.3main.yml
+++ b/.github/workflows/1.3main.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           cd vyos-build
           sudo docker run --rm --privileged \
-            -v $(pwd):/vyos -w /vyos vyos/vyos-build:${VYOS_BRANCH} \
+            -v $(pwd):/vyos -w /vyos vyos/vyos-build:current \
             bash -c "sudo ./build-vyos-image generic --architecture amd64"
 
       # 3️⃣ Install qemu-utils
